Added type check based on the parameter type, updated readme

--- a/example-app/src/app/app.component.html
+++ b/example-app/src/app/app.component.html
@@ -1,6 +1,5 @@
-<form [formGroup]="form" (submit)="createTodo()">
+<form [formGroup]="form" (ngSubmit)="createTodo()">
   <h2>Create todo</h2>
-
   <div>
       <div>
           <p>
